--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.1",
     "method-override": "^3.0.0",
-    "mongoose": "^6.7.2"
+    "mongoose": "^6.7.2",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.3"
